# trackfish

./: .env  .gitignore  :w  AndroidManifest.xml  Cargo.toml  Dioxus.toml  MediaCallback.kt  README.md  android-universal-build.bat  build.rs  chroma.npy  diesel.toml  embed.py  encoder4.keras  fma.py  genreadder.py  genregraph.py  genrelist.txt  grapher.py  identifier.py  importance.py  mobile.toml  shuffle.md  todo.md  tree.txt
.cargo/: config.toml
android/kotlin/dev/dioxus/main/: MediaCallback.kt
android/res/drawable/: ic_notification.xml
assets/: alltracks.css  autoplaylists.css  explorer.css  librarymanagement.css  menubar.css  playlists.css  queue.css  settings.css  style.css  tageditor.css  trackoptions.css  trackview.css
examples/: embedtest.rs  mfcc.rs  nextsong.rs  spec.rs  tempo.rs  virterror.rs  weights.rs
js/: mediasession.js
kotlin/: Ipc.kt  KeepAliveService.kt  Logger.kt  MainActivity.kt  MediaCallback.kt  PermissionHelper.kt  RustWebChromeClient.kt  RustWebView.kt  RustWebViewClient.kt  WryActivity.kt  proguard-wry.pro
lastfm/: clean.py  fasttext.py  musicbrainz.py  test.py  utils.py
migrations/2024-11-26-201558_create_songlist/: down.sql  up.sql
models/: decoder_biases.npy  decoder_weights.npy  encoder_biases.npy  encoder_weights.npy  fingerprint.pb  genrelist  saved_model.pb
models/decoder16/: fingerprint.pb  saved_model.pb
models/decoder16/variables/: variables.data-00000-of-00001  variables.index
models/encoder16/: fingerprint.pb  saved_model.pb
models/encoder16/variables/: variables.data-00000-of-00001  variables.index
models/variables/: variables.data-00000-of-00001  variables.index
python/: chromagram.py  features.py  genreadder.py  genreinteractive.py  grapher.py  identifier.py  importance.py  layers.py  mfcc.py  spec.py  tflite.py  vectorize.py  weights.py
res/drawable/: ic_notification.xml
res/values/: strings.xml
src/: all_tracks.rs  api.rs  audio.rs  database.rs  embed.py  embed.rs  lib.rs  main.rs  models.rs  queue.rs  queuelist.rs  schema.rs  track.rs  trackview.rs
src/analysis/: chroma.rs  mfcc.rs  mod.rs  spectral.rs  tempo.rs  utils.rs  zcr.rs
src/app/: audio.rs  autoplaylist.rs  autotagging.rs  controller.rs  embed.rs  mod.rs  playlist.rs  queue.rs  search.rs  settings.rs  track.rs  utils.rs
src/app/autoplaylist/: deserialize.rs  serialize.rs
src/database/: mod.rs  models.rs
src/gui/: all_tracks.rs  confirm.rs  explorer.rs  icons.rs  input.rs  library.rs  media.rs  mod.rs  playlists.rs  queuelist.rs  settings.rs  stream.rs  tageditor.rs  trackoptions.rs  trackview.rs
src/gui/explorer/: albums.rs  alltracks.rs  artists.rs  genres.rs  search.rs
src/gui/playlists/: autoplaylist.rs
