[package]
name = "trackfish"
version = "0.4.0"
edition = "2021"

[lib]
name = "trackfish"
edition = "2021"

[dependencies]
dioxus = { version="0.7.1", features = ["mobile", "hooks", "html", "signals"] }
id3 = "1.15.0"
rand = "0.8"
tokio = "1.41.1"
http = "1.2.0"
http-range = "0.1.5"
dioxus-logger = "0.6.1"
anyhow = "1.0.94"
log = "0.4.22"
ndarray = "0.16"
ndarray-npy = "0.9"
tracing = "0.1.41"
tracing-log = "0.2.0"
rodio = "0.21.1"
toml = "0.8.19"
serde = { version = "1", features = ["derive"]}
dirs = "6.0.0"
rusqlite = { version = "0.35", features = ["bundled", "array"] }
aubio = { version = "0.2.1" }
rustfft = "6.2.0"
minipng = "0.1.1"
cache-dir = "0.1.8"
once_cell = "1.21.3"
#metaflac = "0.2.8"
base64 = "0.22.1"
lewton = "0.10.2"
env_filter = "0.1.3"
image = { version = "0.24", default-features = false, features = ["jpeg", "png"] }

[target.'cfg(target_os = "android")'.dependencies]
jni = "0.21.1"
ndk-context = "0.1.1"
tracing-android = "0.2.0"
android_logger = "0.15"
crossbow = "0.2.3"
crossbow-android = "0.2.3"

# Desktop only dependencies
[target.'cfg(not(target_os = "android"))'.dependencies]
rfd =  "=0.12.0"

[features]
web = ["dioxus/web"]
desktop = ["dioxus/desktop", "aubio/pkg-config"]
mobile = ["dioxus/mobile", "aubio/bindgen"]

[profile]
[profile.release]
strip = false
debug = true        
opt-level = 1
panic = 'unwind'
split-debuginfo = "packed"
codegen-units = 1
lto = false

[profile.dev]
opt-level = 0
debug = true
debug-assertions = true
overflow-checks = true
