[package]
name = "trackfish"
version = "0.4.0"
edition = "2021"

[lib]
name = "trackfish"
edition = "2021"

[dependencies]
dioxus = { git="https://github.com/DioxusLabs/dioxus", features = ["mobile", "hooks", "html", "signals"] }
id3 = "1.15.0"
rand = "0.8"
tokio = "1.49"
http = "1.4"
http-range = "0.1.5"
dioxus-logger = "0.7.2"
anyhow = "1.0"
log = "0.4"
ndarray = "0.16"
ndarray-npy = "0.9"
tracing-log = "0.2.0"
rodio = "0.21.1"
toml = "0.9"
serde = { version = "1", features = ["derive"]}
dirs = "6.0.0"
rusqlite = { version = "0.35", features = ["bundled", "array"] }
aubio = { version = "0.2.1" }
rustfft = "6.4"
cache-dir = "0.1"
once_cell = "1.21.3"
# metaflac = "0.2.8"
# lewton = "0.10.2"
env_filter = "0.1"
tantivy = "0.25.0"
reqwest = "0.13.1"
serde_json = "1.0.149"

[patch.crates-io]
wry = { git ="https://github.com/rhaskia/wry" }

[target.'cfg(target_os = "android")'.dependencies]
jni = "0.21.1"
ndk-context = "0.1.1"
tracing-android = "0.2.0"
android_logger = "0.15"

# Desktop only dependencies
[target.'cfg(not(target_os = "android"))'.dependencies]
rfd =  "=0.12.0"
minipng = "1.0.0"

[features]
default = ["dioxus/desktop"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop", "aubio/pkg-config"]
mobile = ["dioxus/mobile", "aubio/bindgen"]

[profile]
[profile.dev]
debug = true
